--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "keywords": [],
   "dependencies": {
     "linaria": "^1.3.3",
-    "tslib": "^2.0.1"
+    "tslib": "^2.0.1",
+    "xorshift": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
