--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "linaria": "^1.3.3",
     "tslib": "^2.0.1",
-    "xorshift": "^1.1.1"
+    "xorshift.js": "^1.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
